...
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu" />

    <Button
...
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#CF46E3"
        android:text="Crear Rutina" />

    <TextView
        android:id="@+id/textMisRutinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="132dp"
        android:text="Mis Rutinas"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="142dp"
        android:layout_height="60dp"
...
